fix animations and update content

--- a/index.html
+++ b/index.html
@@ -18,31 +18,18 @@
       <div id="orbit-system">
         <div class="system">
           <div class="satellite-orbit">
-            <img class="satellite" src="images/coffee-machine.svg">
+            <img class="satellite" src="images/coffee-machine.svg" style="bottom: 0; right: 0;">
+            <img class="satellite" src="images/coffee-cup.svg" style="top: 0; right: 0;">
+            <img class="satellite" src="images/coffee-to-go.svg" style="top: 0; left: 0">
+            <img class="satellite" src="images/coffee-kettle.svg" style="bottom: 0; left: 0">
           </div>
           <img class="planet" src="images/coffee-and-code-logo.svg" class="main-logo" alt="Coffee and Code">
-        </div>
-
-        <div class="system2">
-          <div class="satellite-orbit">
-            <img class="satellite" src="images/coffee-machine.svg">
-          </div>
-        </div>
-      </div>
-
-      <div class="logo-container">
-        <img src="images/coffee-and-code-logo.svg" class="main-logo" alt="Coffee and Code">
-        <div class="icon-container">
-          <div class="icon icon-1"><img src="images/coffee-machine.svg"></div>
-          <div class="icon icon-2"><img src="images/coffee-cup.svg"></div>
-          <div class="icon icon-3"><img src="images/coffee-to-go.svg"></div>
-          <div class="icon icon-4"><img src="images/coffee-kettle.svg"></div>
         </div>
       </div>
     </div>
     <div class="content-container">
       <header role="banner">
-        <h1><span>National Coffee Day</span> is Thursday, Sep 29<sup>th</sup></h1>
+        <h1><span>National Coffee Day</span> is Thursday, <span class="nobreak">Sep 29<sup>th</sup></span></h1>
       </header>
       <main role="main">
         <p>If there's one thing we love, it's building web software.</p>
