add social card tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <title>Happy National Coffee Day!</title>
     <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search resu...">
 
+    <!-- Search engines -->
+    <meta name="description" content="">
+    <!-- Google Plus -->
+    <!-- Update your html tag to include the itemscope and itemtype attributes. -->
+    <!-- html itemscope itemtype="http://schema.org/{CONTENT_TYPE}" -->
+    <meta itemprop="name" content="Celebrate National Coffee Day with Coffee and Code">
+    <meta itemprop="description" content="We love coffee and it's a big part of how we got to where we are as a company. Come celebrate with us.">
+    <meta itemprop="image" content="http://coffeeday.coffeeandcode.com/card-image.jpg">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="Celebrate National Coffee Day with Coffee and Code">
+    <meta name="twitter:site" content="@coffeeandcode">
+    <meta name="twitter:title" content="Celebrate National Coffee Day with Coffee and Code">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:creator" content="@coffeeandcode">
+    <meta name="twitter:image:src" content="http://coffeeday.coffeeandcode.com/card-image.jpg">
+    <meta name="twitter:player" content="">
+    <!-- Open Graph General (Facebook & Pinterest) -->
+    <meta property="og:url" content="http://coffeeday.coffeeandcode.com">
+    <meta property="og:title" content="Celebrate National Coffee Day with Coffee and Code">
+    <meta property="og:description" content="">
+    <meta property="og:site_name" content="Celebrate National Coffee Day with Coffee and Code">
+    <meta property="og:image" content="http://coffeeday.coffeeandcode.com/card-image.jpg">
+
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="preload" href="fonts/matosans.woff2" as="font" type="font/woff2" crossorigin>
